BE fixes route plan, Adds more locations, fixes bugs related to calculating route. FE and BE working with minimum requirement